name:                pure-cache
version:             0.8.0.0
synopsis:            Cache decorator
homepage:            purehs.org/doc/pure-cache
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-cache.git

library
  exposed-modules:     Pure.Cache
                       Pure.Cache.DynamicMap
  build-depends:       base,
                       pure-core,
                       pure-default,
                       containers
  hs-source-dirs:      src
  default-language:    Haskell2010
